nginx-blue-green-2/nginx-1.11.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx-blue-green-2-1-11
  namespace: samples
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-blue-green-2
        version: "1.11"
    spec:
      containers:
      - name: nginx
        image: nginx:1.11
        ports:
        - containerPort: 80
