nginx-blue-green-2/nginx-1.12.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx-blue-green-2-1-12
  namespace: samples
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-blue-green-2
        version: "1.12"
    spec:
      containers:
      - name: nginx
        image: nginx:1.12
        ports:
        - containerPort: 80
