nginx-blue-green-2/service-blue-1.12.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue-green-2-blue
  namespace: samples
spec:
  selector:
    app: nginx-blue-green-2
    version: "1.12"
  ports:
  - port: 80
