nginx-blue-green-2/service-green-1.13.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue-green-2-green
  namespace: samples
spec:
  selector:
    app: nginx-blue-green-2
    version: "1.13"
  ports:
  - port: 80
