nginx-blue-green-2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-blue-green-2
  namespace: samples
spec:
  rules:
  - host: blue.nginx-blue-green-2.minikube.test
    http:
      paths:
      - backend:
          serviceName: nginx-blue-green-2-blue
          servicePort: 80
  - host: green.nginx-blue-green-2.minikube.test
    http:
      paths:
      - backend:
          serviceName: nginx-blue-green-2-green
          servicePort: 80
